[package]
name = "win-overlay"
version = "0.1.0"
edition = "2018"
description = "DirectX overlay for Windows written in Rust"
license = "Apache-2.0"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "d3d9", "d3d9types", "memoryapi"] }